# IriusRisk-Central

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  STEP-BY-STEP.md
.github/workflows/: publish-apishell.yml  publish-test-apishell.yml  pull-request.yaml
Integrations/: README.md  tenant_config_migration_BUs.py  tenant_config_migration_assets.py  tenant_config_migration_components.py  tenant_config_migration_security_classifications.py
Integrations/API Utility/: README.MD  READ_ME  getProjectList.py  health.py  install_irtool_reqs  reception.py
Integrations/All Countermeasures Report/: README.MD  config.py  get_libraries.py  get_library_details_v1.py  requirements.txt  requirements.txt.txt
Integrations/All Projects Threats Report/: README.MD  get_project_details.py  get_projects.py
Integrations/ApiShell/: MODULE-README.md  README.md  main.py  pyproject.toml
Integrations/ApiShell/iriusrisk/: __init__.py  auto_initialize.py  commandline.py  configfile.py
Integrations/ApiShell/iriusrisk/v1/: __init__.py  commandline.py  configfile.py  facade.py
Integrations/Bulk User Import/: Bulk_User_Import.csv  README.MD  import_users.py  requirements.txt
Integrations/Component_Search/: .env.template  README.md  requirements.txt  search.py
Integrations/Test/: main.py  (+2 more)
Libraries/: README.md  STRIDE-with-CAPEC.md
Shapes/: README.md
Templates/: 3-tier-web-application-and-api-behind-load-balancer.xml  README.md  aws-siem-and-cloudwatch.xml  azure-general-network-architecture.xml  generic-web-service.xml  ml-ai-example-template.xml  st-generator-form-template.xml
(+254 files in other folders)
