[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes=["iriusrisk/"]

[project]
name = "iriusrisk_apishell_v1"
version = "0.2.0"
authors = [
    { name="Walter Gildersleeve", email="wgildersleeve@iriusrisk.com"},
]
description = "Aids calling IriusRisk v1 APIs. Starting point when creating more complex scripts that create, call and process API calls."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/iriusrisk/IriusRisk-Central/tree/main/Integrations/ApiShell"
"Bug Tracker" = "https://github.com/iriusrisk/IriusRisk-Central/issues"
